[package]
authors = ["Nathaniel Ringo <remexre@gmail.com>"]
description = "A crate for parsing and using JSON pointers, as specified in RFC 6901."
documentation = "https://docs.rs/json-pointer"
homepage = "https://github.com/remexre/json-pointer"
license = "MIT"
name = "json-pointer"
readme = "README.md"
repository = "https://github.com/remexre/json-pointer"
version = "0.2.0"

[badges]
travis-ci = { repository = "remexre/json-pointer", branch = "master" }

[dependencies]
serde_json = "^1.0.2"

[dev-dependencies]
lazy_static = "^0.2.8"
quickcheck = "^0.4.1"
regex = "^0.2.2"
