[package]
authors = ["Nathaniel Ringo <remexre@gmail.com>", "Martin Bartlett <martin.j.bartlett@gmail.com>"]
description = "A crate for parsing and using JSON pointers with simd_json, as specified in RFC 6901."
documentation = "https://docs.rs/json-pointer-simd"
homepage = "https://github.com/remexre/json-pointer-simd"
license = "MIT"
name = "json-pointer-simd"
readme = "README.md"
repository = "https://github.com/remexre/json-pointer-simd"
version = "0.1.0"
edition = "2021"

[dependencies]
simd-json = "0.13.4"

[dev-dependencies]
lazy_static = "^0.2.8"
quickcheck = "^0.4.1"
regex = "^0.2.2"
once_cell = "1.19.0"
